
  - Fix logic error (Danijel Tasov)
    $host_state cannot equal to UP and "Maintenance Mode" at the same time

  - increase $unknown on undefined $host_state (Danijel Tasov)

  - warn if no volumes match (Danijel Tasov)

  - fix bad OUM in vm_disk_io_info (6uellerBpanda)

  - A unpluged network interface is considered critical (Ricardo Bartels)

  - Be more consistent in return level of maintenance mode (Ricardo Bartels)
    only write warning if host runtime is checked with no subselect
  - Added option "--ignore_health" to host runtime (all) check
    Sometimes not all hardware components are correctly reported via
    CIM interface which leads to check errors when checking runtime
    status all. This option ignores the health status and prevents the
    the plugin from failing to report the overall status of the host.
    IMPORTENT: make sure to monitor the host health status separately!
    Most likely via ILO/ILOM interface.
  - declare all file handles as UTF-8 to be able to print multibyte strings
    from CIM interface (e.g. snapshot names)

- 24 Sep 2019 M.Fuerstenau version 1.0.0
  - Merged most pull requests (see 0.9.26.1)
  - Bugfix - Back to direct call of the command interpreter in shebang. Using Linux
    it normally only possible to one argument. So "/usr/bin/env perl" will
    work while "/usr/bin/env perl -w " won't.

- 25 Sep 2019 M.Fuerstenau version 1.1.0
  - Merged most pull requests (see 0.9.26.1)
  - New option  --maintenance_mode_state. Sets status in case ESX host is in maintenance
    mode.

    Possible values are:
    OK or ok
    CRITICAL or critical or CRIT or crit
    WARNING or warning or WARN or warn

    Default is UNKNOWN. Values are case insensitve.

  - Renamed exit_error to exit_unknown because it exits with 3 and not with 2 or 1  
  - Moved exit_unknown(), debug() and save_session() before the cluster sub routines because
    the cluster part is unfinished.
  - Some minor reformatting of code.